<resources>
    <string name="app_name">Guide Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_event">Зарегистрировать событие</string>
    <string name="go_back">Вернуться обратно</string>
    <string name="reload">Обновить</string>
    <string name="event_name">Название события</string>
    <string name="event_date">Дата события</string>
    <string name="event_place">Место проведения</string>
    <string name="event_info">Описание</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="already_have_account">Уже есть аккаунт</string>
    <string name="verify_password">Повторите пароль</string>
    <string name="add_event">Добавить событие</string>
    <string name="event_created">Событие создано!</string>
    <string name="error_fill_text">Есть пустые строчки!</string>
    <string name="account_enter_successful">Вход в аккаунт прошёл успешно!</string>
    <string name="loading">Идёт загрузка...</string>
    <string name="account_created">Аккаунт зарегистрирован!</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
</resources>