<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignInFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="36sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="30dp"/>
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/container"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/container"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/primary_rounded_button"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/create_account"
            android:textColor="@color/special_text"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>