<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EventViewFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/baseline_arrow_back"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/container"
        android:elevation="20dp">

        <TextView
            android:id="@+id/event_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/event_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/event_place_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_place"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/event_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>